# Rinha-24-Rust

./: .env  Cargo.toml  docker-compose.yml
data/: initdb.sql
src/: main.rs
src/api/: app_service.rs
src/db/: mod.rs  repository.rs  transaction.rs
