[package]
name = "rinha-24-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4" }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0.195"
uuid = { version = "1.6.1", features = ["v7", "serde"] }
dotenv = "0.15.0"
serde_json = "1.0.111"
