[package]
name = "rinha-24-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4" }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0.195"
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
dotenv = "0.15.0"
serde_json = "1.0.111"
chrono = "0.4.34"
